--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
   "dependencies": {
     "body-parser": "^1.17.2",
     "express": "^4.15.4",
+    "jsonfile": "^3.0.1",
     "mongodb": "^2.2.31",
     "mongoose": "^4.11.9",
-    "mongoose-geojson-schema": "^2.1.2"
+    "mongoose-geojson-schema": "^2.1.2",
+    "multer": "^1.3.0",
+    "path": "^0.12.7"
   }
 }
