--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "pdv-manager-project",
   "version": "1.0.0",
   "description": "REST API Project",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server.js"
